ckanext/kata/public/css/kata.css
/* ... */
.ui-widget {
    font-family: Arial,Verdana,sans-serif !important;
}
.ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button {
    font-family: Arial,Verdana,sans-serif !important;
}
p {
    font-family: Arial,Tahoma,sans-serif;
}
body {
    font-family: Arial,Tahoma,sans-serif;
}
.navbar-search .search-query {
    font-family: Arial,Tahoma,sans-serif;
}
input, button, select, textarea {
    font-family: Arial,Tahoma,sans-serif;
}
/* New items in front page */
.index-additional-info {
	width: 90%;
	border: 1px solid;
	border-color: #6ccff6;
	background-color: #fff;
	margin: 20px;
	padding: 0px;
	float: left;
}
.new-dataset {
	border: none !important;
	padding: 20px !important;
	background-color: #5a5a5c !important;
	color: white !important;
	margin-bottom: 20px !important;
	-webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
}
.new-dataset h3, .new-dataset a {
	color: white !important;
}
#about h2 {
	font-size: 18px !important;
}
.floating-error {
	position: fixed;
	width: 597px;
	top: 0em;
	vertical-align: middle;
	border: 1px solid;
	border-color: #53cc61;
	background-color: #53cc61;
	color: #333;
	padding: 8px 35px 8px 14px;
	-webkit-border-bottom-right-radius: 4px;
	-webkit-border-bottom-left-radius: 4px;
	-moz-border-radius-bottomright: 4px;
	-moz-border-radius-bottomleft: 4px;
	border-bottom-right-radius: 4px;
	border-bottom-left-radius: 4px;
	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
	filter: alpha(opacity=90);
	-moz-opacity: 0.9;
	-khtml-opacity: 0.9;
	opacity: 0.9;
	z-index: 1;	
}
#field-license {
	width: 300px !important;
}

